--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 <title>Exterior House Painting Quote Calculator | Askern DN6</title>
-
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/house-painting.html">
-
 <meta name="description" content="Instant exterior house painting quote calculator for Askern DN6 and a 6-mile radius. Measure front, back and side walls to estimate a full exterior house paint.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
@@ -20,7 +17,7 @@ header{
 text-align:center;
 padding:25px 10px;
 background:#fff;
-border-bottom:4px solid #27ae60;
+border-bottom:4px solid #000;
 }
 .logo{max-height:90px;width:auto;}
 .call-btn{
@@ -35,7 +32,10 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{background:#333;}
+.call-btn:hover{
+background:#fff;
+color:#000;
+}
 
 /* MAIN */
 main{
@@ -44,27 +44,35 @@ margin:40px auto;
 padding:0 15px;
 font-family:Arial,sans-serif;
 line-height:1.6;
-color:#222;
+color:#000;
 }
 h1,h2{color:#000;}
-label{display:block;margin-top:12px;font-weight:bold;}
+label{
+display:block;
+margin-top:12px;
+font-weight:bold;
+}
 input,select{
 width:100%;
 padding:10px;
 margin-top:5px;
 font-size:16px;
+border:2px solid #000;
 }
 button{
 margin-top:20px;
 padding:14px 30px;
 font-size:18px;
-background:#27ae60;
+background:#000;
 color:#fff;
-border:none;
+border:2px solid #000;
 border-radius:6px;
 cursor:pointer;
 }
-button:hover{background:#1f8a4c;}
+button:hover{
+background:#fff;
+color:#000;
+}
 .result{
 margin-top:25px;
 padding:20px;
@@ -77,23 +85,21 @@ font-weight:bold;
 margin-top:15px;
 text-align:center;
 }
-.cta .call-btn, .cta .color-btn{
+.cta a{
 font-size:20px;
 padding:14px 30px;
-text-decoration:none;
-display:inline-flex;
-align-items:center;
-gap:8px;
-border:none;
-border-radius:6px;
-cursor:pointer;
-}
-.cta .color-btn{
-background:#27ae60;
+background:#000;
 color:#fff;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+display:inline-block;
+margin-top:10px;
 }
-.cta .color-btn:hover{
-background:#1f8a4c;
+.cta a:hover{
+background:#fff;
+color:#000;
 }
 
 /* FOOTER */
@@ -120,7 +126,7 @@ text-decoration:none;
 font-style:italic;
 font-size:0.95em;
 margin-top:5px;
-color:#555;
+color:#333;
 }
 </style>
 </head>
@@ -129,7 +135,7 @@ color:#555;
 
 <header>
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
-<div style="text-align:center; margin-top:10px;">
+<div style="margin-top:10px;">
 <a href="https://steely1968.github.io/" style="font-size:20px;color:#000;text-decoration:none;font-weight:600;">Home</a>
 </div>
 <br>
@@ -145,7 +151,7 @@ color:#555;
 <p><em>In some cases, scaffolding may be required; however, we always aim to avoid it unless absolutely necessary. If you’re unsure, please give us a call.</em></p>
 
 <h2>House Height</h2>
-<label>Number of storeys</label>
+<label for="storeys">Number of storeys</label>
 <select id="storeys">
 <option value="2">1 Storey (2 metres)</option>
 <option value="4">2 Storeys (4 metres)</option>
@@ -153,55 +159,56 @@ color:#555;
 </select>
 
 <h2>Wall Measurements (metres)</h2>
-<label>Front of house</label>
+<label for="front">Front of house</label>
 <input type="number" id="front" min="0" step="0.1">
 
-<label>Back of house</label>
+<label for="back">Back of house</label>
 <input type="number" id="back" min="0" step="0.1">
 
-<label>Side wall 1</label>
+<label for="side1">Side wall 1</label>
 <input type="number" id="side1" min="0" step="0.1">
 
-<label>Side wall 2</label>
+<label for="side2">Side wall 2</label>
 <input type="number" id="side2" min="0" step="0.1">
 
-<h2>Surface Type (affects labour & paint usage)</h2>
+<h2>Surface Type</h2>
+<label for="surface">Select surface type</label>
 <select id="surface">
-<option value="1.0">Smooth render or masonry (standard rate)</option>
-<option value="1.15">Porous render (+15% labour & paint)</option>
-<option value="1.30">Pebble dash (+30% labour & paint)</option>
-<option value="1.45">Stone (+45% labour & paint)</option>
+<option value="1.0">Smooth render or masonry</option>
+<option value="1.15">Porous render (+15%)</option>
+<option value="1.30">Pebble dash (+30%)</option>
+<option value="1.45">Stone (+45%)</option>
 </select>
 
 <h2>Do I Need Fungicide Treatment?</h2>
-<label>Select an option:</label>
+<label for="needFungicide">Choose option</label>
 <select id="needFungicide" onchange="updateNotes()">
 <option value="yes">Yes</option>
 <option value="no">No</option>
 </select>
-<p><em>Fungicide treatment is useful if your walls have existing algae, mould, or damp areas. It helps prevent re-growth and ensures a longer-lasting paint finish. If your walls are dry, clean, and free of mould, fungicide may not be necessary.</em></p>
+<p><em>Fungicide helps remove algae and mould and stops it returning. If your walls are clean and dry, it may not be needed.</em></p>
 <p id="fungicideNote" class="note"></p>
 
 <h2>Do I Need Sealing?</h2>
-<label>Select an option:</label>
+<label for="needSealing">Choose option</label>
 <select id="needSealing" onchange="updateNotes()">
 <option value="yes">Yes</option>
 <option value="no">No</option>
 </select>
-<p><em>Sealing helps smooth porous surfaces and ensures paint adheres properly. If your walls are already smooth and in good condition, sealing may not be required.</em></p>
+<p><em>Sealing helps paint stick to porous surfaces. Smooth walls may not need sealing.</em></p>
 <p id="sealingNote" class="note"></p>
 
 <h2>Doors & Windows (Deductions)</h2>
-<label>Windows (£7 off each)</label>
+<label for="windows">Number of windows (£7 off each)</label>
 <input type="number" id="windows" min="0">
 
-<label>Doors (£10 off each)</label>
+<label for="doors">Number of doors (£10 off each)</label>
 <input type="number" id="doors" min="0">
 
-<label>Patio doors (£20 off each)</label>
+<label for="patio">Number of patio doors (£20 off each)</label>
 <input type="number" id="patio" min="0">
 
-<button onclick="calculate()">Calculate Quote</button>
+<button type="button" onclick="calculate()">Calculate Quote</button>
 
 <div class="result" id="result">
 Enter measurements to calculate your quote.
@@ -209,16 +216,11 @@ Enter measurements to calculate your quote.
 
 <div id="cta" class="cta" style="display:none;">
 <p>If this sounds like a realistic price for you, give us a ring!</p>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+<a href="tel:07735873694">📞 Call Now: 07735 873694</a>
 
-<!-- Colour range link with icon -->
 <p style="margin-top:15px;">Write your price down and explore our standard colour range:</p>
-<a href="https://homerepairs4u.com/quotes/colour-range.html" class="color-btn">
-<span>🎨</span> Visit Colour Range
-</a>
+<a href="https://homerepairs4u.com/quotes/colour-range.html">Visit Colour Range</a>
 </div>
-
-<p><small>This calculator provides a guide price only. Final pricing may vary following an on-site inspection.</small></p>
 
 </main>
 
@@ -239,18 +241,15 @@ function updateNotes(){
 const fung = document.getElementById('needFungicide').value;
 const seal = document.getElementById('needSealing').value;
 
-document.getElementById('fungicideNote').textContent = fung === 'yes' ?
-'This will add £2.50 per m² to your total cost.' :
-'No extra cost for fungicide treatment.';
+document.getElementById('fungicideNote').textContent =
+fung === 'yes' ? 'Adds £2.50 per m².' : 'No extra cost.';
 
-document.getElementById('sealingNote').textContent = seal === 'yes' ?
-'This will add £3.00 per m² to your total cost.' :
-'No extra cost for sealing.';
+document.getElementById('sealingNote').textContent =
+seal === 'yes' ? 'Adds £3.00 per m².' : 'No extra cost.';
 }
 
 function calculate(){
 const height = parseFloat(document.getElementById('storeys').value);
-
 const front = parseFloat(document.getElementById('front').value)||0;
 const back = parseFloat(document.getElementById('back').value)||0;
 const side1 = parseFloat(document.getElementById('side1').value)||0;
@@ -264,15 +263,12 @@ const baseRate = 12;
 
 let total = area * baseRate * surfaceMultiplier;
 
-// Paint is compulsory
+// Paint compulsory
 total += area * 5;
 
-// Apply fungicide if dropdown yes
 if(document.getElementById('needFungicide').value === 'yes'){ total += area * 2.5; }
-// Apply sealing if dropdown yes
 if(document.getElementById('needSealing').value === 'yes'){ total += area * 3; }
 
-// Deductions
 total -= (parseInt(document.getElementById('windows').value)||0) * 7;
 total -= (parseInt(document.getElementById('doors').value)||0) * 10;
 total -= (parseInt(document.getElementById('patio').value)||0) * 20;
@@ -284,51 +280,7 @@ document.getElementById('result').innerHTML =
 
 document.getElementById('cta').style.display = 'block';
 }
-
-// Initialize notes on load
 updateNotes();
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "How does the exterior painting quote calculator work?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Measure the front, back, and sides of your house in metres. Select the house height, surface type, and optional treatments such as fungicide or sealing. The calculator will estimate a guide price."
-}
-},
-{
-"@type": "Question",
-"name": "Do you operate outside Askern?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "We operate within Askern DN6 and a 6-mile radius, covering surrounding towns and villages for exterior painting services."
-}
-},
-{
-"@type": "Question",
-"name": "Is paint included in the quote?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, the paint finish is compulsory and included at £5 per m²."
-}
-},
-{
-"@type": "Question",
-"name": "Do I need fungicide or sealing?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Fungicide is recommended for walls with algae, mould, or damp spots. Sealing helps paint adhere to porous surfaces. Both are optional and add extra cost if selected."
-}
-}
-]
-}
 </script>
 
 </body>
