--- a/quotes/house-paint-colours.html
+++ b/quotes/house-paint-colours.html
@@ -2,13 +2,13 @@
 <html lang="en-GB">
 <head>
 
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>ADD TITLE</title>
+
+<title>Exterior House Paint Colours | See Your Home in Different Colours</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/house-painting-colours">
-<meta name="description" content="ADD META">
+<meta name="description" content="View the same house painted in different exterior colours. Compare finishes and shades to help you choose the perfect colour for your exterior house painting.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 <style>
@@ -19,11 +19,7 @@ padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-
-.logo{
-max-height:90px;
-width:auto;
-}
+.logo{max-height:90px;width:auto;}
 
 /* CALL BUTTON */
 .call-btn{
@@ -38,9 +34,49 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{
-background:#333;
-color:#fff;
+.call-btn:hover{background:#333;color:#fff;}
+
+/* MAIN */
+main{
+max-width:1100px;
+margin:40px auto;
+padding:0 15px;
+font-family:Arial, sans-serif;
+line-height:1.6;
+color:#222;
+}
+h1,h2{text-align:center;}
+.intro{
+max-width:800px;
+margin:0 auto 30px auto;
+text-align:center;
+}
+.gallery{
+display:grid;
+grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
+gap:20px;
+}
+.gallery figure{
+margin:0;
+text-align:center;
+}
+.gallery img{
+width:100%;
+height:auto;
+border-radius:6px;
+border:2px solid #ddd;
+}
+.gallery figcaption{
+margin-top:8px;
+font-weight:bold;
+}
+.cta{
+margin:40px 0;
+text-align:center;
+}
+.cta p{
+font-size:18px;
+margin-bottom:15px;
 }
 
 /* FOOTER */
@@ -52,20 +88,20 @@ padding:25px 15px;
 margin-top:40px;
 font-size:14px;
 }
-
 .footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
+background-color:black;
+padding:20px;
+text-align:center;
+margin-top:15px;
 }
-
 .footer-services a{
-color: white;
-margin: 0 10px;
+color:white;
+margin:0 10px;
 }
 </style>
+</head>
 
+<body>
 
 <!-- ✅ HEADER -->
 <header>
@@ -85,6 +121,76 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
+<main>
+
+<h1>Exterior House Paint Colours</h1>
+
+<div class="intro">
+<p>This page shows the <strong>same house</strong> painted in different exterior colours so you can clearly see how colour choice changes the whole look of a property.</p>
+<p>Use these examples to help you decide what style suits your home – modern, traditional, bold or subtle.</p>
+</div>
+
+<h2>See the Same House in Different Colours</h2>
+
+<div class="gallery">
+
+<figure>
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp"
+alt="House painted in bitter chocolate brown colour"
+width="800" height="500"
+loading="lazy" decoding="async">
+<figcaption>Bitter Chocolate</figcaption>
+</figure>
+
+<figure>
+<img src="https://steely1968.github.io/images/Brick-red.webp"
+alt="House painted in brick red colour"
+width="800" height="500"
+loading="lazy" decoding="async">
+<figcaption>Brick Red</figcaption>
+</figure>
+
+<figure>
+<img src="https://steely1968.github.io/images/cornish-cream.webp"
+alt="House painted in cornish cream colour"
+width="800" height="500"
+loading="lazy" decoding="async">
+<figcaption>Cornish Cream</figcaption>
+</figure>
+
+<figure>
+<img src="https://steely1968.github.io/images/house-to-paint.webp"
+alt="Original house before painting"
+width="800" height="500"
+loading="lazy" decoding="async">
+<figcaption>Original House</figcaption>
+</figure>
+
+<figure>
+<img src="https://steely1968.github.io/images/Olive.webp"
+alt="House painted in olive green colour"
+width="800" height="500"
+loading="lazy" decoding="async">
+<figcaption>Olive</figcaption>
+</figure>
+
+<figure>
+<img src="https://steely1968.github.io/images/Vermont-grey.webp"
+alt="House painted in vermont grey colour"
+width="800" height="500"
+loading="lazy" decoding="async">
+<figcaption>Vermont Grey</figcaption>
+</figure>
+
+</div>
+
+<div class="cta">
+<p>If one of these colours looks right for your home, write it down and give us a call.</p>
+<p>We’ll help you match it to our standard exterior paint range.</p>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
 
 <!-- ✅ FOOTER -->
 <footer class="site-footer">
@@ -99,3 +205,6 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
+
+</body>
+</html>
