--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -7,7 +7,7 @@
 
 <title>Exterior House Paint Colours | See Your Home in Different Colours</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/quotes/house-painting-colours">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/colour-range.html">
 <meta name="description" content="View the same house painted in different exterior colours. Compare finishes and shades to help you choose the perfect colour for your exterior house painting.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
@@ -103,21 +103,12 @@ margin:0 10px;
 
 <body>
 
-<!-- ✅ HEADER -->
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<a href="https://steely1968.github.io/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
@@ -135,50 +126,32 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <div class="gallery">
 
 <figure>
-<img src="https://steely1968.github.io/images/bitter-chocolate.webp"
-alt="House painted in bitter chocolate brown colour"
-width="800" height="500"
-loading="lazy" decoding="async">
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="House painted in bitter chocolate brown colour" width="800" height="500" loading="lazy" decoding="async">
 <figcaption>Bitter Chocolate</figcaption>
 </figure>
 
 <figure>
-<img src="https://steely1968.github.io/images/Brick-red.webp"
-alt="House painted in brick red colour"
-width="800" height="500"
-loading="lazy" decoding="async">
+<img src="https://steely1968.github.io/images/Brick-red.webp" alt="House painted in brick red colour" width="800" height="500" loading="lazy" decoding="async">
 <figcaption>Brick Red</figcaption>
 </figure>
 
 <figure>
-<img src="https://steely1968.github.io/images/cornish-cream.webp"
-alt="House painted in cornish cream colour"
-width="800" height="500"
-loading="lazy" decoding="async">
+<img src="https://steely1968.github.io/images/cornish-cream.webp" alt="House painted in cornish cream colour" width="800" height="500" loading="lazy" decoding="async">
 <figcaption>Cornish Cream</figcaption>
 </figure>
 
 <figure>
-<img src="https://steely1968.github.io/images/house-to-paint.webp"
-alt="Original house before painting"
-width="800" height="500"
-loading="lazy" decoding="async">
+<img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" width="800" height="500" loading="lazy" decoding="async">
 <figcaption>Original House</figcaption>
 </figure>
 
 <figure>
-<img src="https://steely1968.github.io/images/Olive.webp"
-alt="House painted in olive green colour"
-width="800" height="500"
-loading="lazy" decoding="async">
+<img src="https://steely1968.github.io/images/Olive.webp" alt="House painted in olive green colour" width="800" height="500" loading="lazy" decoding="async">
 <figcaption>Olive</figcaption>
 </figure>
 
 <figure>
-<img src="https://steely1968.github.io/images/Vermont-grey.webp"
-alt="House painted in vermont grey colour"
-width="800" height="500"
-loading="lazy" decoding="async">
+<img src="https://steely1968.github.io/images/Vermont-grey.webp" alt="House painted in vermont grey colour" width="800" height="500" loading="lazy" decoding="async">
 <figcaption>Vermont Grey</figcaption>
 </figure>
 
@@ -192,10 +165,8 @@ loading="lazy" decoding="async">
 
 </main>
 
-<!-- ✅ FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
-
 <div class="footer-services">
 <p style="color: white;">Our Services:</p>
 <a href="/services/Exterior-decorating.html">Exterior Decorating</a>
