--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -38,7 +38,7 @@ border:2px solid #000;
 
 /* MAIN */
 main{
-max-width:1100px;
+max-width:900px;
 margin:40px auto;
 padding:0 15px;
 font-family:Arial, sans-serif;
@@ -51,24 +51,20 @@ max-width:800px;
 margin:0 auto 30px auto;
 text-align:center;
 }
-.gallery{
-display:grid;
-grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
-gap:20px;
-}
-.gallery figure{
-margin:0;
+.colour-block{
+margin-bottom:40px;
 text-align:center;
 }
-.gallery img{
+.colour-block img{
 width:100%;
 height:auto;
 border-radius:6px;
 border:2px solid #ddd;
 }
-.gallery figcaption{
-margin-top:8px;
+.colour-block p{
+font-size:18px;
 font-weight:bold;
+margin-top:10px;
 }
 .cta{
 margin:40px 0;
@@ -117,44 +113,50 @@ margin:0 10px;
 <h1>Exterior House Paint Colours</h1>
 
 <div class="intro">
-<p>This page shows the <strong>same house</strong> painted in different exterior colours so you can clearly see how colour choice changes the whole look of a property.</p>
-<p>Use these examples to help you decide what style suits your home – modern, traditional, bold or subtle.</p>
+<p>This page shows the same house painted in different exterior colours so you can clearly see how colour choice changes the look of a property.</p>
+<p>Scroll down to compare each colour one at a time.</p>
 </div>
 
-<h2>See the Same House in Different Colours</h2>
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp"
+alt="House painted in bitter chocolate brown"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Bitter Chocolate</p>
+</div>
 
-<div class="gallery">
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/brick-red.webp"
+alt="House painted in brick red colour"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Brick Red</p>
+</div>
 
-<figure>
-<img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="House painted in bitter chocolate brown colour" width="800" height="500" loading="lazy" decoding="async">
-<figcaption>Bitter Chocolate</figcaption>
-</figure>
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/cornish-cream.webp"
+alt="House painted in cornish cream colour"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Cornish Cream</p>
+</div>
 
-<figure>
-<img src="https://steely1968.github.io/images/Brick-red.webp" alt="House painted in brick red colour" width="800" height="500" loading="lazy" decoding="async">
-<figcaption>Brick Red</figcaption>
-</figure>
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/house-to-paint.webp"
+alt="Original house before painting"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Original House</p>
+</div>
 
-<figure>
-<img src="https://steely1968.github.io/images/cornish-cream.webp" alt="House painted in cornish cream colour" width="800" height="500" loading="lazy" decoding="async">
-<figcaption>Cornish Cream</figcaption>
-</figure>
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/olive.webp"
+alt="House painted in olive green colour"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Olive</p>
+</div>
 
-<figure>
-<img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" width="800" height="500" loading="lazy" decoding="async">
-<figcaption>Original House</figcaption>
-</figure>
-
-<figure>
-<img src="https://steely1968.github.io/images/Olive.webp" alt="House painted in olive green colour" width="800" height="500" loading="lazy" decoding="async">
-<figcaption>Olive</figcaption>
-</figure>
-
-<figure>
-<img src="https://steely1968.github.io/images/Vermont-grey.webp" alt="House painted in vermont grey colour" width="800" height="500" loading="lazy" decoding="async">
-<figcaption>Vermont Grey</figcaption>
-</figure>
-
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/Vermont-grey.webp"
+alt="House painted in vermont grey colour"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Vermont Grey</p>
 </div>
 
 <div class="cta">
