--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -12,7 +12,6 @@
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 <style>
-/* HEADER STYLING */
 header{
 text-align:center;
 padding:25px 10px;
@@ -21,7 +20,6 @@ border-bottom:4px solid #27ae60;
 }
 .logo{max-height:90px;width:auto;}
 
-/* CALL BUTTON */
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -36,7 +34,6 @@ border:2px solid #000;
 }
 .call-btn:hover{background:#333;color:#fff;}
 
-/* MAIN */
 main{
 max-width:900px;
 margin:40px auto;
@@ -75,7 +72,6 @@ font-size:18px;
 margin-bottom:15px;
 }
 
-/* FOOTER */
 .site-footer{
 background:#000;
 color:#fff;
@@ -153,7 +149,7 @@ width="800" height="500" loading="lazy" decoding="async">
 </div>
 
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/Vermont-grey.webp"
+<img src="https://steely1968.github.io/images/vermont-grey.webp"
 alt="House painted in vermont grey colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Vermont Grey</p>
