--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -42,7 +42,7 @@ font-family:Arial, sans-serif;
 line-height:1.6;
 color:#222;
 }
-h1,h2{text-align:center;}
+h1{text-align:center;}
 .intro{
 max-width:800px;
 margin:0 auto 30px auto;
@@ -110,28 +110,6 @@ margin:0 10px;
 
 <div class="intro">
 <p>This page shows the same house painted in different exterior colours so you can clearly see how colour choice changes the look of a property.</p>
-<p>Scroll down to compare each colour one at a time.</p>
-</div>
-
-<div class="colour-block">
-<img src="https://steely1968.github.io/images/bitter-chocolate.webp"
-alt="House painted in bitter chocolate brown"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Bitter Chocolate</p>
-</div>
-
-<div class="colour-block">
-<img src="https://steely1968.github.io/images/brick-red.webp"
-alt="House painted in brick red colour"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Brick Red</p>
-</div>
-
-<div class="colour-block">
-<img src="https://steely1968.github.io/images/cornish-cream.webp"
-alt="House painted in cornish cream colour"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Cornish Cream</p>
 </div>
 
 <div class="colour-block">
@@ -142,10 +120,17 @@ width="800" height="500" loading="lazy" decoding="async">
 </div>
 
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/olive.webp"
-alt="House painted in olive green colour"
+<img src="https://steely1968.github.io/images/cornish-cream.webp"
+alt="House painted in cornish cream colour"
 width="800" height="500" loading="lazy" decoding="async">
-<p>Olive</p>
+<p>Cornish Cream</p>
+</div>
+
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp"
+alt="House painted in bitter chocolate brown"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Bitter Chocolate</p>
 </div>
 
 <div class="colour-block">
@@ -153,6 +138,13 @@ width="800" height="500" loading="lazy" decoding="async">
 alt="House painted in vermont grey colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Vermont Grey</p>
+</div>
+
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/brick-red.webp"
+alt="House painted in brick red colour"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Brick Red</p>
 </div>
 
 <div class="cta">
