--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -147,6 +147,13 @@ width="800" height="500" loading="lazy" decoding="async">
 <p>Brick Red</p>
 </div>
 
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/olive.webp"
+alt="House painted in olive green colour"
+width="800" height="500" loading="lazy" decoding="async">
+<p>Olive</p>
+</div>
+
 <div class="cta">
 <p>If one of these colours looks right for your home, write it down and give us a call.</p>
 <p>We’ll help you match it to our standard exterior paint range.</p>
