--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -8,7 +8,7 @@
 <title>Exterior House Paint Colours | See Your Home in Different Colours</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/colour-range.html">
-<meta name="description" content="View the same house painted in different exterior colours. Compare finishes and shades to help you choose the perfect colour for your exterior house painting.">
+<meta name="description" content="Compare the same house painted in different exterior colours, including Sandtex Cornish Cream. See how finishes and shades transform your home's look and get guidance on choosing the perfect colour.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 <style>
@@ -109,19 +109,19 @@ margin:0 10px;
 <h1>Exterior House Paint Colours</h1>
 
 <div class="intro">
-<p>This page shows the same house painted in different exterior colours so you can clearly see how colour choice changes the look of a property.</p>
+<p>Sandtex Cornish Cream is a soft, warm, and neutral shade that brings elegance and brightness to any home exterior. Its subtle cream tones complement both traditional and contemporary architecture, providing a welcoming appearance that enhances curb appeal. The finish is smooth yet durable, designed to withstand the elements while retaining colour and texture for years. Cornish Cream pairs beautifully with white trims, darker roof tiles, and natural stone accents. Ideal for homeowners looking for a classic yet timeless colour, this finish is suitable for brick, rendered walls, and pebble dash surfaces. It creates a light, airy effect that makes homes feel larger and more inviting, while also harmonising with garden greenery and outdoor landscaping.</p>
 </div>
 
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/house-to-paint.webp"
-alt="Original house before painting"
+alt="Original house before any painting"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Original House</p>
 </div>
 
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/cornish-cream.webp"
-alt="House painted in cornish cream colour"
+alt="House painted in Sandtex Cornish Cream, soft warm neutral colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Cornish Cream</p>
 </div>
