--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -63,6 +63,15 @@ font-size:18px;
 font-weight:bold;
 margin-top:10px;
 }
+.colour-block .description{
+margin-top:15px;
+font-size:16px;
+color:#333;
+text-align:left;
+max-width:800px;
+margin-left:auto;
+margin-right:auto;
+}
 .cta{
 margin:40px 0;
 text-align:center;
@@ -109,7 +118,7 @@ margin:0 10px;
 <h1>Exterior House Paint Colours</h1>
 
 <div class="intro">
-<p>Sandtex Cornish Cream is a soft, warm, and neutral shade that brings elegance and brightness to any home exterior. Its subtle cream tones complement both traditional and contemporary architecture, providing a welcoming appearance that enhances curb appeal. The finish is smooth yet durable, designed to withstand the elements while retaining colour and texture for years. Cornish Cream pairs beautifully with white trims, darker roof tiles, and natural stone accents. Ideal for homeowners looking for a classic yet timeless colour, this finish is suitable for brick, rendered walls, and pebble dash surfaces. It creates a light, airy effect that makes homes feel larger and more inviting, while also harmonising with garden greenery and outdoor landscaping.</p>
+<p>This page shows the same house painted in different exterior colours so you can clearly see how colour choice changes the look of a property.</p>
 </div>
 
 <div class="colour-block">
@@ -124,6 +133,9 @@ width="800" height="500" loading="lazy" decoding="async">
 alt="House painted in Sandtex Cornish Cream, soft warm neutral colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Cornish Cream</p>
+<div class="description">
+<p>Sandtex Cornish Cream is a soft, warm, and neutral shade that brings elegance and brightness to any home exterior. Its subtle cream tones complement both traditional and contemporary architecture, providing a welcoming appearance that enhances curb appeal. The finish is smooth yet durable, designed to withstand the elements while retaining colour and texture for years. Cornish Cream pairs beautifully with white trims, darker roof tiles, and natural stone accents. Ideal for homeowners looking for a classic yet timeless colour, this finish is suitable for brick, rendered walls, and pebble dash surfaces. It creates a light, airy effect that makes homes feel larger and more inviting, while also harmonising with garden greenery and outdoor landscaping.</p>
+</div>
 </div>
 
 <div class="colour-block">
