--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -8,7 +8,7 @@
 <title>Exterior House Paint Colours | See Your Home in Different Colours</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/colour-range.html">
-<meta name="description" content="Compare the same house painted in different exterior colours, including Sandtex Cornish Cream. See how finishes and shades transform your home's look and get guidance on choosing the perfect colour.">
+<meta name="description" content="Compare the same house painted in different exterior colours, including Sandtex Cornish Cream and Sandtex Bitter Chocolate. See how finishes and shades transform your home's look and get guidance on choosing the perfect colour.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 <style>
@@ -140,9 +140,12 @@ width="800" height="500" loading="lazy" decoding="async">
 
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/bitter-chocolate.webp"
-alt="House painted in bitter chocolate brown"
+alt="House painted in Sandtex Bitter Chocolate deep brown colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Bitter Chocolate</p>
+<div class="description">
+<p>Sandtex Bitter Chocolate is a rich, deep brown shade that gives a bold, sophisticated look to any property exterior. This colour is perfect for creating a striking contrast with lighter trims or neutral surroundings, while adding warmth and depth to the overall facade. Designed to withstand harsh weather conditions, the finish remains vibrant and durable over time. Ideal for homeowners who want a traditional yet dramatic statement, Bitter Chocolate works beautifully on brickwork, rendered walls, or textured surfaces. Its strong earthy tone enhances architectural features, blends seamlessly with garden landscaping, and creates an inviting, premium appearance that stands out in the neighbourhood.</p>
+</div>
 </div>
 
 <div class="colour-block">
