--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -8,9 +8,11 @@
 <title>Exterior House Paint Colours | See Your Home in Different Colours</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/colour-range.html">
-<meta name="description" content="Compare the same house painted in different exterior colours, including Sandtex Cornish Cream and Sandtex Bitter Chocolate. See how finishes and shades transform your home's look and get guidance on choosing the perfect colour.">
+<meta name="description" content="Compare the same house painted in different exterior Sandtex colours. View Cornish Cream, Bitter Chocolate, Vermont Grey, Brick Red, Olive and see how finishes and shades transform your home's look.">
 
-<link rel="preload" as="image" href="/images/logo.webp" />
+<!-- Preload main LCP image -->
+<link rel="preload" as="image" href="https://steely1968.github.io/images/house-to-paint.webp">
+
 <style>
 header{
 text-align:center;
@@ -20,19 +22,19 @@ border-bottom:4px solid #27ae60;
 }
 .logo{max-height:90px;width:auto;}
 
-.call-btn{
+.call-btn, .quote-btn{
 display:inline-block;
-margin-top:18px;
-padding:14px 28px;
+margin-top:15px;
+padding:12px 28px;
 background:#000;
 color:#fff;
-font-size:19px;
+font-size:17px;
 text-decoration:none;
 font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{background:#333;color:#fff;}
+.call-btn:hover, .quote-btn:hover{background:#333;color:#fff;}
 
 main{
 max-width:900px;
@@ -49,7 +51,7 @@ margin:0 auto 30px auto;
 text-align:center;
 }
 .colour-block{
-margin-bottom:40px;
+margin-bottom:50px;
 text-align:center;
 }
 .colour-block img{
@@ -71,6 +73,14 @@ text-align:left;
 max-width:800px;
 margin-left:auto;
 margin-right:auto;
+}
+.local-seo{
+max-width:800px;
+margin:30px auto;
+font-size:16px;
+line-height:1.6;
+color:#222;
+text-align:center;
 }
 .cta{
 margin:40px 0;
@@ -100,6 +110,49 @@ color:white;
 margin:0 10px;
 }
 </style>
+
+<!-- ✅ FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "What is Sandtex Cornish Cream?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Sandtex Cornish Cream is a soft, warm neutral exterior paint that enhances brightness and elegance on brick, rendered, or pebble dash surfaces. It is durable, weather-resistant, and suitable for traditional and contemporary homes."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer local services in Askern?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, Home Repairs 4U operates within a 6-mile radius of Askern DN6, providing exterior painting, garden, guttering, and restoration services."
+}
+},
+{
+"@type": "Question",
+"name": "Can I see my house in different colours before choosing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, this page displays the same house painted in six Sandtex colours including Cornish Cream, Bitter Chocolate, Vermont Grey, Brick Red, and Olive, so you can visualise your home's exterior before committing."
+}
+},
+{
+"@type": "Question",
+"name": "Are the Sandtex paints durable?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, all Sandtex exterior paints used by Home Repairs 4U are long-lasting, weather-resistant, and maintain colour vibrancy over time."
+}
+}
+]
+}
+</script>
+
 </head>
 
 <body>
@@ -118,16 +171,17 @@ margin:0 10px;
 <h1>Exterior House Paint Colours</h1>
 
 <div class="intro">
-<p>This page shows the same house painted in different exterior colours so you can clearly see how colour choice changes the look of a property.</p>
+<p>This page shows the same house painted in different exterior Sandtex colours so you can clearly see how colour choice changes the look of a property.</p>
 </div>
 
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/house-to-paint.webp"
 alt="Original house before any painting"
-width="800" height="500" loading="lazy" decoding="async">
+width="800" height="500" loading="eager" decoding="async">
 <p>Original House</p>
 </div>
 
+<!-- Cornish Cream -->
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/cornish-cream.webp"
 alt="House painted in Sandtex Cornish Cream, soft warm neutral colour"
@@ -136,8 +190,10 @@ width="800" height="500" loading="lazy" decoding="async">
 <div class="description">
 <p>Sandtex Cornish Cream is a soft, warm, and neutral shade that brings elegance and brightness to any home exterior. Its subtle cream tones complement both traditional and contemporary architecture, providing a welcoming appearance that enhances curb appeal. The finish is smooth yet durable, designed to withstand the elements while retaining colour and texture for years. Cornish Cream pairs beautifully with white trims, darker roof tiles, and natural stone accents. Ideal for homeowners looking for a classic yet timeless colour, this finish is suitable for brick, rendered walls, and pebble dash surfaces. It creates a light, airy effect that makes homes feel larger and more inviting, while also harmonising with garden greenery and outdoor landscaping.</p>
 </div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
+<!-- Bitter Chocolate -->
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/bitter-chocolate.webp"
 alt="House painted in Sandtex Bitter Chocolate deep brown colour"
@@ -146,27 +202,47 @@ width="800" height="500" loading="lazy" decoding="async">
 <div class="description">
 <p>Sandtex Bitter Chocolate is a rich, deep brown shade that gives a bold, sophisticated look to any property exterior. This colour is perfect for creating a striking contrast with lighter trims or neutral surroundings, while adding warmth and depth to the overall facade. Designed to withstand harsh weather conditions, the finish remains vibrant and durable over time. Ideal for homeowners who want a traditional yet dramatic statement, Bitter Chocolate works beautifully on brickwork, rendered walls, or textured surfaces. Its strong earthy tone enhances architectural features, blends seamlessly with garden landscaping, and creates an inviting, premium appearance that stands out in the neighbourhood.</p>
 </div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
+<!-- Vermont Grey -->
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/vermont-grey.webp"
-alt="House painted in vermont grey colour"
+alt="House painted in Sandtex Vermont Grey soft modern grey"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Vermont Grey</p>
+<div class="description">
+<p>Sandtex Vermont Grey is a soft, contemporary grey that brings a calm, modern touch to any home exterior. Its subtle neutral tone works well with white trims or darker window frames, creating a clean and sophisticated appearance. This finish is highly durable, maintaining its muted elegance even in harsh weather conditions. Vermont Grey is ideal for homeowners seeking a modern yet understated look, perfect for brickwork, rendered surfaces, and textured walls. It complements natural landscaping and stone features, giving the property a refined, timeless feel without being overpowering.</p>
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
+<!-- Brick Red -->
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/brick-red.webp"
-alt="House painted in brick red colour"
+alt="House painted in Sandtex Brick Red bold warm colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Brick Red</p>
+<div class="description">
+<p>Sandtex Brick Red is a warm and vibrant red shade that adds character and charm to any home exterior. This colour evokes a traditional, classic appearance, making it ideal for brick, rendered, or pebble-dashed walls. Its strong, eye-catching tone highlights architectural details while complementing natural garden surroundings. The finish is long-lasting and weather-resistant, ensuring the rich red remains vibrant for years. Brick Red is perfect for homeowners wanting to make a statement while maintaining a timeless, welcoming aesthetic for their property.</p>
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
+<!-- Olive -->
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/olive.webp"
-alt="House painted in olive green colour"
+alt="House painted in Sandtex Olive deep green colour"
 width="800" height="500" loading="lazy" decoding="async">
 <p>Olive</p>
+<div class="description">
+<p>Sandtex Olive is a deep, earthy green that adds a natural, harmonious feel to any exterior. This colour works beautifully with brickwork, rendered surfaces, or textured walls, creating a subtle yet distinctive look. Its rich tone blends seamlessly with garden greenery, trees, and landscaping, while also providing a modern touch to traditional property styles. Designed for durability and long-lasting colour retention, Olive is ideal for homeowners seeking a stylish yet understated exterior that complements its surroundings and enhances curb appeal without overpowering the overall design.</p>
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
+</div>
+
+<div class="local-seo">
+<p>Home Repairs 4U proudly serves Askern and surrounding areas within a 6-mile radius. Our team provides professional exterior painting, decorating, guttering, and restoration services. Whether you're in Askern, Norton, Campsall, or nearby villages, we ensure your property looks its best with premium Sandtex exterior paints.</p>
 </div>
 
 <div class="cta">
