--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -1,262 +1,149 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 <title>Exterior House Paint Colours | See Your Home in Different Colours</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/quotes/colour-range.html">
-<meta name="description" content="Compare the same house painted in different exterior Sandtex colours. View Cornish Cream, Bitter Chocolate, Vermont Grey, Brick Red, Olive and see how finishes and shades transform your home's look.">
+<meta name="description" content="View the same house painted in different Sandtex exterior colours including Cornish Cream, Bitter Chocolate, Vermont Grey, Brick Red and Olive.">
 
-<!-- Preload main LCP image -->
 <link rel="preload" as="image" href="https://steely1968.github.io/images/house-to-paint.webp">
 
 <style>
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
+body{margin:0;font-family:Arial,sans-serif;color:#222;}
+header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
-
-.call-btn, .quote-btn{
-display:inline-block;
-margin-top:15px;
-padding:12px 28px;
-background:#000;
-color:#fff;
-font-size:17px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
+.call-btn,.quote-btn{
+display:inline-block;margin-top:18px;padding:14px 28px;
+background:#000;color:#fff;font-size:18px;text-decoration:none;
+font-weight:bold;border-radius:6px;border:2px solid #000;
 }
-.call-btn:hover, .quote-btn:hover{background:#333;color:#fff;}
-
-main{
-max-width:900px;
-margin:40px auto;
-padding:0 15px;
-font-family:Arial, sans-serif;
-line-height:1.6;
-color:#222;
-}
+.call-btn:hover,.quote-btn:hover{background:#333;color:#fff;}
+main{max-width:900px;margin:40px auto;padding:0 15px;}
 h1{text-align:center;}
-.intro{
-max-width:800px;
-margin:0 auto 30px auto;
-text-align:center;
-}
-.colour-block{
-margin-bottom:50px;
-text-align:center;
-}
+.colour-block{text-align:center;margin-bottom:50px;}
 .colour-block img{
-width:100%;
-height:auto;
-border-radius:6px;
-border:2px solid #ddd;
+width:100%;height:auto;border-radius:6px;border:2px solid #ddd;
 }
-.colour-block p{
-font-size:18px;
-font-weight:bold;
-margin-top:10px;
-}
-.colour-block .description{
-margin-top:15px;
-font-size:16px;
-color:#333;
-text-align:left;
-max-width:800px;
-margin-left:auto;
-margin-right:auto;
-}
-.local-seo{
-max-width:800px;
-margin:30px auto;
-font-size:16px;
-line-height:1.6;
-color:#222;
-text-align:center;
-}
-.cta{
-margin:40px 0;
-text-align:center;
-}
-.cta p{
-font-size:18px;
-margin-bottom:15px;
-}
-
+.description{max-width:800px;margin:15px auto;text-align:left;}
 .site-footer{
-background:#000;
-color:#fff;
-text-align:center;
-padding:25px 15px;
-margin-top:40px;
-font-size:14px;
+background:#000;color:#fff;text-align:center;
+padding:25px 15px;margin-top:40px;font-size:14px;
 }
-.footer-services{
-background-color:black;
-padding:20px;
-text-align:center;
-margin-top:15px;
-}
-.footer-services a{
-color:white;
-margin:0 10px;
-}
+.footer-services{background:#000;padding:20px;text-align:center;margin-top:15px;}
+.footer-services a{color:#fff;margin:0 10px;}
 </style>
-
-<!-- ✅ FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "What is Sandtex Cornish Cream?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Sandtex Cornish Cream is a soft, warm neutral exterior paint that enhances brightness and elegance on brick, rendered, or pebble dash surfaces. It is durable, weather-resistant, and suitable for traditional and contemporary homes."
-}
-},
-{
-"@type": "Question",
-"name": "Do you offer local services in Askern?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, Home Repairs 4U operates within a 6-mile radius of Askern DN6, providing exterior painting, garden, guttering, and restoration services."
-}
-},
-{
-"@type": "Question",
-"name": "Can I see my house in different colours before choosing?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, this page displays the same house painted in six Sandtex colours including Cornish Cream, Bitter Chocolate, Vermont Grey, Brick Red, and Olive, so you can visualise your home's exterior before committing."
-}
-},
-{
-"@type": "Question",
-"name": "Are the Sandtex paints durable?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, all Sandtex exterior paints used by Home Repairs 4U are long-lasting, weather-resistant, and maintain colour vibrancy over time."
-}
-}
-]
-}
-</script>
-
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header>
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<div style="margin-top:10px;">
+<a href="https://steely1968.github.io/" style="font-size:20px;color:#000;text-decoration:none;font-weight:600;">Home</a>
 </div>
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
 <main>
-
 <h1>Exterior House Paint Colours</h1>
 
-<div class="intro">
-<p>This page shows the same house painted in different exterior Sandtex colours so you can clearly see how colour choice changes the look of a property.</p>
-</div>
-
+<!-- ORIGINAL HOUSE -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/house-to-paint.webp"
-alt="Original house before any painting"
-width="800" height="500" loading="eager" decoding="async">
+<img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" width="800" height="500" loading="eager">
 <p>Original House</p>
 </div>
 
-<!-- Cornish Cream -->
+<!-- CORNISH CREAM -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/cornish-cream.webp"
-alt="House painted in Sandtex Cornish Cream, soft warm neutral colour"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Cornish Cream</p>
+<img src="https://steely1968.github.io/images/cornish-cream.webp" alt="Sandtex Cornish Cream exterior paint" width="800" height="500" loading="lazy">
+<h2>Cornish Cream – Sandtex</h2>
 <div class="description">
-<p>Sandtex Cornish Cream is a soft, warm, and neutral shade that brings elegance and brightness to any home exterior. Its subtle cream tones complement both traditional and contemporary architecture, providing a welcoming appearance that enhances curb appeal. The finish is smooth yet durable, designed to withstand the elements while retaining colour and texture for years. Cornish Cream pairs beautifully with white trims, darker roof tiles, and natural stone accents. Ideal for homeowners looking for a classic yet timeless colour, this finish is suitable for brick, rendered walls, and pebble dash surfaces. It creates a light, airy effect that makes homes feel larger and more inviting, while also harmonising with garden greenery and outdoor landscaping.</p>
+Sandtex Cornish Cream is a warm, welcoming shade that gives homes a bright but soft appearance. It works especially well on traditional houses, bungalows and cottages, but also looks clean and modern on newer properties. The creamy tone reflects light nicely, helping homes look larger and fresher without being too stark or white.
+
+This colour is very popular with customers who want something lighter than magnolia but warmer than grey. It suits brick, render, pebble dash and stone walls and pairs well with white, grey or black window frames and doors. Because it is not too dark, it also hides dust and weather marks better than pure white finishes.
+
+As a Sandtex exterior paint, Cornish Cream offers strong protection against rain, frost, sun and pollution. It is breathable, water-resistant and designed to last for years, making it a practical as well as attractive choice for exterior house painting.
 </div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
-<!-- Bitter Chocolate -->
+<!-- BITTER CHOCOLATE -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/bitter-chocolate.webp"
-alt="House painted in Sandtex Bitter Chocolate deep brown colour"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Bitter Chocolate</p>
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="Sandtex Bitter Chocolate exterior paint" width="800" height="500" loading="lazy">
+<h2>Bitter Chocolate – Sandtex</h2>
 <div class="description">
-<p>Sandtex Bitter Chocolate is a rich, deep brown shade that gives a bold, sophisticated look to any property exterior. This colour is perfect for creating a striking contrast with lighter trims or neutral surroundings, while adding warmth and depth to the overall facade. Designed to withstand harsh weather conditions, the finish remains vibrant and durable over time. Ideal for homeowners who want a traditional yet dramatic statement, Bitter Chocolate works beautifully on brickwork, rendered walls, or textured surfaces. Its strong earthy tone enhances architectural features, blends seamlessly with garden landscaping, and creates an inviting, premium appearance that stands out in the neighbourhood.</p>
+Sandtex Bitter Chocolate is a deep, rich brown that gives homes a bold and premium appearance. It is ideal for customers who want something darker and more dramatic than creams or greys. This shade works particularly well on large properties, detached houses and homes with lots of greenery around them.
+
+Bitter Chocolate creates strong contrast with white or light-coloured windows, fascias and doors. It also looks excellent with wooden features, fences and garden structures. Because it is darker, it gives a solid, grounded feel to a building and can make properties look more expensive and well cared for.
+
+As with all Sandtex finishes, Bitter Chocolate is made to handle harsh British weather. It resists cracking, peeling and fading, even in heavy rain or strong sunlight. This makes it a great choice for customers who want a striking colour that will still look good for many years.
 </div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
-<!-- Vermont Grey -->
+<!-- VERMONT GREY -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/vermont-grey.webp"
-alt="House painted in Sandtex Vermont Grey soft modern grey"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Vermont Grey</p>
+<img src="https://steely1968.github.io/images/vermont-grey.webp" alt="Sandtex Vermont Grey exterior paint" width="800" height="500" loading="lazy">
+<h2>Vermont Grey – Sandtex</h2>
 <div class="description">
-<p>Sandtex Vermont Grey is a soft, contemporary grey that brings a calm, modern touch to any home exterior. Its subtle neutral tone works well with white trims or darker window frames, creating a clean and sophisticated appearance. This finish is highly durable, maintaining its muted elegance even in harsh weather conditions. Vermont Grey is ideal for homeowners seeking a modern yet understated look, perfect for brickwork, rendered surfaces, and textured walls. It complements natural landscaping and stone features, giving the property a refined, timeless feel without being overpowering.</p>
+Sandtex Vermont Grey is a modern, neutral shade that suits almost any style of property. It is ideal for customers who want a clean, smart look without going too dark or too light. This colour works well on render, brick, pebble dash and stone.
+
+Vermont Grey looks great with black, white or anthracite window frames and doors. It is popular on new builds but also gives older houses a fresh, updated appearance. Because it is a balanced grey, it hides everyday dirt better than very light colours.
+
+Sandtex Vermont Grey offers excellent weather protection and long life, helping your home stay looking smart even in tough conditions.
 </div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
-<!-- Brick Red -->
+<!-- BRICK RED -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/brick-red.webp"
-alt="House painted in Sandtex Brick Red bold warm colour"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Brick Red</p>
+<img src="https://steely1968.github.io/images/brick-red.webp" alt="Sandtex Brick Red exterior paint" width="800" height="500" loading="lazy">
+<h2>Brick Red – Sandtex</h2>
 <div class="description">
-<p>Sandtex Brick Red is a warm and vibrant red shade that adds character and charm to any home exterior. This colour evokes a traditional, classic appearance, making it ideal for brick, rendered, or pebble-dashed walls. Its strong, eye-catching tone highlights architectural details while complementing natural garden surroundings. The finish is long-lasting and weather-resistant, ensuring the rich red remains vibrant for years. Brick Red is perfect for homeowners wanting to make a statement while maintaining a timeless, welcoming aesthetic for their property.</p>
+Sandtex Brick Red is a strong, traditional colour that stands out and adds character. It is ideal for homes that want a bold, classic look. This shade works very well on rendered or pebbled houses and looks great with white or cream windows and doors.
+
+Brick Red is popular on older properties, terraces and cottages, but also works well on modern homes that want something different. It gives a warm, solid appearance that makes properties feel welcoming.
+
+As a Sandtex exterior paint, Brick Red is built to handle rain, frost and sunlight without fading or cracking, keeping your home protected and looking good.
 </div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
-<!-- Olive -->
+<!-- OLIVE -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/olive.webp"
-alt="House painted in Sandtex Olive deep green colour"
-width="800" height="500" loading="lazy" decoding="async">
-<p>Olive</p>
+<img src="https://steely1968.github.io/images/olive.webp" alt="Sandtex Olive exterior paint" width="800" height="500" loading="lazy">
+<h2>Olive – Sandtex</h2>
 <div class="description">
-<p>Sandtex Olive is a deep, earthy green that adds a natural, harmonious feel to any exterior. This colour works beautifully with brickwork, rendered surfaces, or textured walls, creating a subtle yet distinctive look. Its rich tone blends seamlessly with garden greenery, trees, and landscaping, while also providing a modern touch to traditional property styles. Designed for durability and long-lasting colour retention, Olive is ideal for homeowners seeking a stylish yet understated exterior that complements its surroundings and enhances curb appeal without overpowering the overall design.</p>
+Sandtex Olive is a natural, earthy colour that blends perfectly with gardens, trees and countryside surroundings. It is a great choice for homes in rural areas or for anyone who wants their property to feel calm and in tune with nature.
+
+Olive works well with stone features, wooden fences and brown or cream windows. It gives homes a unique look without being too bright or overpowering.
+
+Like all Sandtex paints, Olive is breathable, weather-resistant and long-lasting, helping your exterior stay protected year after year.
 </div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
-<div class="local-seo">
-<p>Home Repairs 4U proudly serves Askern and surrounding areas within a 6-mile radius. Our team provides professional exterior painting, decorating, guttering, and restoration services. Whether you're in Askern, Norton, Campsall, or nearby villages, we ensure your property looks its best with premium Sandtex exterior paints.</p>
+<!-- SANDTEX CHART -->
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/sandtex-paint-chart-1.webp" alt="Sandtex exterior paint colour chart" width="800" height="500" loading="lazy">
+<p>Sandtex Colour Chart</p>
 </div>
 
-<div class="cta">
-<p>If one of these colours looks right for your home, write it down and give us a call.</p>
-<p>We’ll help you match it to our standard exterior paint range.</p>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
-</div>
+<p style="text-align:center;">Home Repairs 4U proudly serves Askern and surrounding areas within 6 miles.</p>
 
+<a href="tel:07735873694" class="call-btn" style="display:block;text-align:center;">📞 Call Now: 07735 873694</a>
 </main>
 
+<!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 <div class="footer-services">
-<p style="color: white;">Our Services:</p>
+<p>Our Services:</p>
 <a href="/services/Exterior-decorating.html">Exterior Decorating</a>
 <a href="/services/garden.html">Garden</a>
 <a href="/services/guttering.html">Guttering</a>
